--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ requires-python = ">=3.10"
 license = {text = "MIT"}
 
 [project.urls]
-"Homepage" = "https://github.com/yourusername/carsafe"
-"Bug Tracker" = "https://github.com/yourusername/carsafe/issues"
+"Homepage" = "https://github.com/KazeAsh/CarSafe"
+"Bug Tracker" = "https://github.com/KazeAsh/CarSafe/issues"
 
 [tool.black]
 line-length = 88
